@@ -599,6 +599,10 @@ Release 1.2.0 - unreleased
 
     HADOOP-9473. Typo in FileUtil copy() method. (Glen Mazza via suresh)
 
+    MAPREDUCE-5169. Fixed JobTracker recovery to ensure both job-info and
+    jobToken file are saved correctly to prevent race-condition between job
+    submission and initialization. (acmurthy)
+
 Release 1.1.2 - 2013.01.30
 
   INCOMPATIBLE CHANGES
